9base (1:6-6) unstable; urgency=low

  * Add a watch file, thanks to Andy Simpkins <andy-debian@koipond.org.uk>
    (Closes: #695163)
  * Use F_SETFD instead of F_SETFL to set FD_CLOEXEC, patch from Guillem
    Jover <guillem@debian.org> (Closes: #696247)

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 21 Dec 2012 13:30:12 +0100

9base (1:6-5) unstable; urgency=low

  * New maintainer (Closes: #647092).
  * Include 'strings' in the long description (Closes: #622177).
  * Remove empty manual pages: better no manpages than an empty one.
  * Fix the troff macros to look for include files at the right location.
  * Update README.Debian, to show how to display the plan9 man pages properly.

 -- Gergely Nagy <algernon@madhouse-project.org>  Thu, 15 Dec 2011 14:15:57 +0100

9base (1:6-4) unstable; urgency=low

  * New maintainer

 -- Kai Hendry <hendry@iki.fi>  Sun, 05 Dec 2010 15:51:57 +0000

9base (1:6-3) experimental; urgency=low

  * Updating package to debhelper 8.
  * Switching to source format 3.0 (quilt).
  * Updating variable handing in rules.

 -- Daniel Baumann <daniel@debian.org>  Sat, 13 Nov 2010 09:57:39 +0100

9base (1:6-2) experimental; urgency=low

  * Updating standards version to 3.9.0.
  * Updating to standards version 3.9.1.
  * Building on all architectures again, appears to build on ia64 again
    (Closes: #599952).
  * Removing suggest to 9mount.

 -- Daniel Baumann <daniel@debian.org>  Sun, 17 Oct 2010 21:51:20 +0200

9base (1:6-1) unstable; urgency=low

  * Adding Kai as co-maintainer.
  * Merging upstream version 6.

 -- Daniel Baumann <daniel@debian.org>  Fri, 04 Jun 2010 17:22:03 +0200

9base (1:5-1) unstable; urgency=low

  [ Daniel Baumann ]
  * Adding explicit debian source version 1.0 until switch to 3.0.
  * Updating year in copyright file.
  * Updating to standards 3.8.4.
  * Sorting dh call in rules to more common order.
  * Updating README.source.
  * Updating lintian overrides.

  [ Kai Hendry ]
  * Merging upstream version 5.