@@ -1,0 +1,1 @@
+lib9/regexp.7   /usr/share/man/man7/
