@@ -1,0 +1,3 @@
+usr/share/man/man1/ascii.1plan9         usr/share/man/man1/unicode.1plan9
+usr/share/man/man1/factor.1plan9        usr/share/man/man1/primes.1plan9
+usr/share/man/man1/cat.1plan9           usr/share/man/man1/read.1plan9
