@@ -1,9 +1,9 @@
 Source: 9base
 Section: utils
 Priority: optional
-Build-Depends: debhelper (>= 8~)
+Build-Depends: debhelper (>= 9~)
 Maintainer: Gergely Nagy <algernon@madhouse-project.org>
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
 Homepage: http://tools.suckless.org/9base
 Vcs-Browser: http://git.madhouse-project.org/debian/9base/
 Vcs-Git: git://git.madhouse-project.org/debian/9base.git
